force-app/main/default/objects/webm__WebMerge_Mapping_Filter__c/webm__WebMerge_Mapping_Filter__c.object-meta.xml
<CustomObject>
    <label>WebMerge Mapping Filter</label>
    <nameField>
        <label>WebMerge Mapping Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebMerge Mapping Filter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>