force-app/main/default/objects/webm__WebMerge_Mapping_Filter__c/fields/webm__Field__c.field-meta.xml
<CustomField>
    <fullName>webm__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>