force-app/main/default/objects/webm__WebMerge_Mapping_Filter__c/fields/webm__Operator__c.field-meta.xml
<CustomField>
    <fullName>webm__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>