force-app/main/default/objects/webm__WebMerge_Mapping_Filter__c/fields/webm__Value__c.field-meta.xml
<CustomField>
    <fullName>webm__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>