force-app/main/default/objects/webm__WebMerge_Mapping_Filter__c/fields/webm__Webmerge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Mapping__c</fullName>
    <label>Webmerge Mapping</label>
    <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
    <relationshipLabel>WebMerge Mapping Filter</relationshipLabel>
    <relationshipName>WebMerge_Mapping_Filter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>